fix: make venue search card  tags visible in mobile (#395)

--- a/apps/sports-helsinki/src/domain/venue/venueCard/largeVenueCard.module.scss
+++ b/apps/sports-helsinki/src/domain/venue/venueCard/largeVenueCard.module.scss
@@ -72,11 +72,6 @@
 
     .keywordWrapperDesktop {
       order: 6;
-      //padding: var(--spacing-xs) 0;
-
-      @include respond_below(s) {
-        display: none;
-      }
     }
 
     .buttonWrapper {
